--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
+	<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
 		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro" id="fas"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -31,8 +31,8 @@
 				<li class="nav-item">
 					<a class="nav-link" href="home.html">Home</a>
 				</li>
-				<li class="nav-item active bg-bb rounded">
-					<a class="nav-link" href="about.html">About</a>
+				<li class="nav-item active bg-warning rounded">
+					<a class="nav-link" href="about.html" id="black">About</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="contact.html">Contact Us</a>
@@ -43,7 +43,7 @@
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn my-2 my-sm-0" id="bg-bb" type="submit">Search</button>
+				<button class="btn my-2 my-sm-0 bg-warning" type="submit">Search</button>
 			</form>
 		</div>
 	</nav>
@@ -60,6 +60,7 @@
 		</div>
 		<div>
 			<blockquote class="blockquote text-center py-5" id="blockquote-2">
+				<i class="fas fa-quote-left"></i>
 				<p class="mb-0 px-2">It always seem impossible until it is done.</p>
 				<footer class="blockquote-footer">Nelson Mandela in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
@@ -72,6 +73,7 @@
 			</div>	
 		</div>
 		<blockquote class="blockquote text-center py-5" id="blockquote-3">
+			<i class="fas fa-quote-left"></i>
 				<p class="mb-0 px-2">A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
 				<footer class="blockquote-footer">Ayn Rand in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
@@ -83,7 +85,7 @@
 		</div>
 	</main>
 
-	<footer class="container-fluid bg-bb text-center" id="footer">
+	<footer class="container-fluid bg-dark text-warning text-center" id="footer">
 		<small>Gerald Bobiles | 2018 &copy</small>
 	</footer>
 
