--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg bg-orange navbar-light">
+	<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
 		<a class="navbar-brand" href="index.html"><i class="fas fa-camera-retro" id="fas"></i></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -39,13 +39,13 @@
 				<li class="nav-item">
 					<a class="nav-link" href="contact.html">Contact Us</a>
 				</li>
-				<li class="nav-item active bg-bb rounded">
-					<a class="nav-link" href="gallery.html">Gallery</a>
+				<li class="nav-item active bg-warning rounded">
+					<a class="nav-link" href="gallery.html" id="black">Gallery</a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn my-2 my-sm-0" id="bg-bb" type="submit">Search</button>
+				<button class="btn my-2 my-sm-0 bg-warning" type="submit">Search</button>
 			</form>
 		</div>
 	</nav>
@@ -59,6 +59,7 @@
 		</div>
 		<div>
 			<blockquote class="blockquote text-center py-5" id="blockquote-1">
+				<i class="fas fa-quote-left"></i>
 				<p class="mb-0 px-2">Don't watch the clock; do what it does. Keep going.</p>
 				<footer class="blockquote-footer">Sam Levenson in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
@@ -68,83 +69,95 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img1.jpg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img1.jpg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<a href="assets/images/img1.jpg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img1.jpg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img2.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img2.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img2.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img2.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img3.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img3.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img3.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img3.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img4.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img4.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img4.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img4.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img5.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img5.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img5.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img5.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img6.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img6.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img6.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img6.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img7.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img7.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img7.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img7.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div><
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img8.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img8.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img8.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img8.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img9.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img9.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img9.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img9.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img10.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img10.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img10.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img10.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img11.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img11.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img11.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img11.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 p-0 container-hover">
-					<img src="assets/images/img12.jpeg" class="img-fluid image">
-					<div class="middle">
-						<div class="text"><a href="assets/images/img12.jpeg" data-lightbox="gallery" class="text-dark"><i class="fas fa-eye"></i></a></div>
+					<div class="col-md-6 col-lg-4 p-0 container-hover">
+						<a href="assets/images/img12.jpeg" data-lightbox="gallery" class="text-dark">
+						<img src="assets/images/img12.jpeg" class="img-fluid image">
+						<div class="middle">
+							<div class="text"><i class="fas fa-eye"></i></div>
+						</div></a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<footer class="container-fluid bg-bb text-center" id="footer">
-		<small>Gerald Bobiles | 2018 &copy</small>
-	</footer>
-	<script type="text/javascript" src="assets/js/lightbox.js"></script>
-</body>
-</html>
+		<footer class="container-fluid bg-dark text-warning text-center" id="footer">
+			<small>Gerald Bobiles | 2018 &copy</small>
+		</footer>
+		<script type="text/javascript" src="assets/js/lightbox.js"></script>
+	</body>
+	</html>
