updated files for CSP-1 Version 2

--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 		<div class="text-left py-5 container-fluid mt-0 vertical-align" id="author-bg">
 			<h1 class="font-1">About the dev:</h1>
 			<hr class="my-4 bg-light">
-			<p class="font-weight-bold">Gerald Bobiles, is a full stack, front end and back end dveloper. He wanted to make beautifully designed website that comes with strong functions. He believes that devs like him can change the world, one code at a time!</p>
+			<p class="font-weight-bold">Gerald Bobiles, is a full stack, front end and back end developer. He wanted to make beautifully designed website that comes with strong functions. He believes that devs like him can change the world, one code at a time!</p>
 		</div>
 	</div>
 	<!-- end of author banner -->
