--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 	<div class="container-fluid main-height text-center" id="contact-bg">
 		<main>
 			<div class=" container-fluid pt-3">
-				<h1 class="font-1 text-light">Contact Us <i class="fas fa-comment-alt"></i></h1>
+				<h1 class="font-1 text-light">Contact Us <i class="fas fa-comment-alt text-warning"></i></h1>
 				<hr class="my-3 bg-light">
 			</div>
 			<div class="row py-4 mx-auto">
