This contains the newest version of csp1

--- a/gallery.html
+++ b/gallery.html
@@ -52,9 +52,11 @@
 
 	<div class="main-height">
 		<div class="text-center" id="gal-bg">
-			<div class="vertical-align">
-				<h1 class="font-1">Gallery</h1>
-				<p>This is the highlight of the page | Come browse through these breathtaking images</p>
+			<div class="container-fluid p-3 text-center" id="gallery">
+				<div class="vertical-align">
+					<h1 class="font-1">Gallery</h1>
+					<p>This is the highlight of the page | Come browse through these breathtaking images</p>
+				</div>
 			</div>
 		</div>
 		<div>
@@ -63,7 +65,7 @@
 				<p class="mb-0 px-2">Don't watch the clock; do what it does. Keep going.</p>
 				<footer class="blockquote-footer">Sam Levenson in <cite title="Source Title">BrainyQuote.com</cite></footer>
 			</blockquote>
-			
+
 		</div>
 
 		<div class="container-fluid">
@@ -77,87 +79,104 @@
 					</div>
 					<div class="col-md-6 col-lg-4 p-0 container-hover">
 						<a href="assets/images/img2.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img2.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img3.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img3.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img4.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img4.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img5.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img5.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img6.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img6.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img7.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img7.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div><
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img8.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img8.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img9.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img9.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img10.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img10.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img11.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img11.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-					<div class="col-md-6 col-lg-4 p-0 container-hover">
-						<a href="assets/images/img12.jpeg" data-lightbox="gallery" class="text-dark">
-						<img src="assets/images/img12.jpeg" class="img-fluid image">
-						<div class="middle">
-							<div class="text"><i class="fas fa-eye"></i></div>
-						</div></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer class="container-fluid bg-dark text-warning text-center" id="footer">
-			<small>Gerald Bobiles | 2018 &copy</small>
-		</footer>
-		<script type="text/javascript" src="assets/js/lightbox.js"></script>
-	</body>
-	</html>
+							<img src="assets/images/img2.jpeg" class="img-fluid image">
+							<div class="middle">
+								<div class="text"><i class="fas fa-eye"></i></div>
+							</div></a>
+						</div>
+						<div class="col-md-6 col-lg-4 p-0 container-hover">
+							<a href="assets/images/img3.jpeg" data-lightbox="gallery" class="text-dark">
+								<img src="assets/images/img3.jpeg" class="img-fluid image">
+								<div class="middle">
+									<div class="text"><i class="fas fa-eye"></i></div>
+								</div></a>
+							</div>
+							<div class="col-md-6 col-lg-4 p-0 container-hover">
+								<a href="assets/images/img4.jpeg" data-lightbox="gallery" class="text-dark">
+									<img src="assets/images/img4.jpeg" class="img-fluid image">
+									<div class="middle">
+										<div class="text"><i class="fas fa-eye"></i></div>
+									</div></a>
+								</div>
+								<div class="col-md-6 col-lg-4 p-0 container-hover">
+									<a href="assets/images/img5.jpeg" data-lightbox="gallery" class="text-dark">
+										<img src="assets/images/img5.jpeg" class="img-fluid image">
+										<div class="middle">
+											<div class="text"><i class="fas fa-eye"></i></div>
+										</div></a>
+									</div>
+									<div class="col-md-6 col-lg-4 p-0 container-hover">
+										<a href="assets/images/img6.jpeg" data-lightbox="gallery" class="text-dark">
+											<img src="assets/images/img6.jpeg" class="img-fluid image">
+											<div class="middle">
+												<div class="text"><i class="fas fa-eye"></i></div>
+											</div></a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img7.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img7.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text"><i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img8.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img8.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text">
+														<i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img9.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img9.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text">
+														<i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img10.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img10.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text">
+														<i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img11.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img11.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text">
+														<i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="col-md-6 col-lg-4 p-0 container-hover">
+											<a href="assets/images/img12.jpeg" data-lightbox="gallery" class="text-dark">
+												<img src="assets/images/img12.jpeg" class="img-fluid image">
+												<div class="middle">
+													<div class="text">
+														<i class="fas fa-eye"></i>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<footer class="container-fluid bg-dark text-warning text-center" id="footer">
+								<small>Gerald Bobiles | 2018 &copy</small>
+							</footer>
+							<script type="text/javascript" src="assets/js/lightbox.js"></script>
+						</body>
+						</html>
