--- a/home.html
+++ b/home.html
@@ -78,8 +78,8 @@
 	<div class="container-fluid" id="hero-bg">
 		<div class="container-fluid p-3 text-center" id="hero">
 			<div class="vertical-align">
-			<h2 class="font-1" id="black">WELCOME</h2>
-			<h1 class="font-1">Start Your Journey Now</h1>	
+			<h2 class="font-1">WELCOME</h2>
+			<h1 class="font-1" id="black">Start Your Journey Now</h1>	
 		</div>
 		</div>
 		
