--- a/index.html
+++ b/index.html
@@ -17,28 +17,24 @@
 	<script type="text/javascript" src="assets/js/popper.min.js"></script>
 </head>
 <body id="landing">
-	<div class="jumbotron jumbotron-fluid text-center" id="landing-page">
-		<h1 class="display-4 baby-blue animated zoomIn slower">R E L A X</h1>
-		<p class="lead animated zoomIn slower delay-1s">Welcome to PhotoTravelling!</p>
-		<p class="animated zoomIn slower delay-2s">The website where you can immerse yourself with beautiful relaxing photos of sceneries you don't see everyday.</p>
-		<hr class="my-4 mx-5 bg-light">
-		<p class="animated zoomIn slower delay-3s">Not everyone can travel anytime they want, so why don't you take a break for a second and imagine yourself somewhere beautiful.</p>
-		<div>
-		<p class="animated zoomIn slower delay-4s">This website will help you out by browsing through our galleries of photos!</p>
+	
+	<div class="jumbotron text-center vertical-align" id="landing-page">
+		<div class="text-center">
+			<i class="fas fa-camera-retro" id="fas2"></i>
 		</div>
-		<p class="animated zoomIn slower delay-5s">
-			<a class="btn btn-bb btn-lg" href="home.html" role="button">Start Photo Travelling Now</a>
-		</p>
-		<div class="animated fadeInUpBig slower delay-6s">
-		<small class="">Created by: Gerad Bobiles | 2018 &copy</small>
-		</div>
-		<div class="animated fadeInUpBig slower delay7-s">
+		<h1 class="text-warning my-4">Photo + Travelling!</h1>
+		
+		<p class="mb-5">The website where you can immerse yourself with beautiful relaxing photos of sceneries you don't see everyday.</p>
+		<a class="btn btn-bb btn-lg mb-3" href="home.html" role="button">Enter</a>
+		<div class="py-2">
 			<small>Follow me on:</small>
 			<a href="https://www.facebook.com/g3raldbobiles" target="blank"><i class="fab fa-facebook"></i></a>
 			<a href="https://twitter.com/tunay_na_gerald" target="blank"><i class="fab fa-twitter-square"></i></a>
 			<a href="https://github.com/gbobiles" target="blank"><i class="fab fa-github"></i></a>
 		</div>
 	</div>
-
+<footer class="container-fluid bg-dark text-warning text-center" id="footer-index">
+<small>Gerald Bobiles | 2018 &copy</small>
+</footer>
 </body>
 </html>
