--- a/about.html
+++ b/about.html
@@ -53,10 +53,12 @@
 	<main>
 
 		<div class="text-center" id="parallax-about">
-			<div class="vertical-align container-fluid" id="about-bg">
+			<div class="container-fluid text-center" id="about-bg">
+			<div class="vertical-align" >
 				<h1 class="font-1">About Us</h1>
 				<p>Understand the why behind the site | It's more than just a site, it's passion</p>
 			</div>
+		</div>
 		</div>
 		<div>
 			<blockquote class="blockquote text-center py-5" id="blockquote-2">
